--- a/main.css
+++ b/main.css
@@ -7,6 +7,12 @@
     box-sizing: border-box;
 }
 
+img {
+    width: 50%;
+    margin: 1px auto;
+    display: block;
+}
+
 p {
     font-family: 'Assistant', sans-serif;
     color: orangered;
@@ -17,21 +23,26 @@ h1 {
     font-family: 'Indie Flower', cursive;
     font-size: 101px;
     color: orangered;
+    text-align: center;
 }
 
 h2 {
     font-family: 'Indie Flower', cursive;
     font-size: 43px;
     color: orangered;
+    text-align: center;
 }
 
 h3 {
     font-family: 'Indie Flower', cursive;
     font-size: 22px;
     color: orangered;
+    text-align: center;
 }
 
 h4 {
     font-family: 'Assistant', sans-serif;
     color: orangered;
+    text-align: center;
 }
+
